<resources>
    <string name="greetings">Welcome</string>
    <string name="app_name">MediPro</string>
    <string name="notice_name">Notice board</string>
    <string name="notice">This application is used to deliver medicine. \n
        User have to create an account to take the service of this app </string>
    <string name="launcher_button1_text">Enter System</string>

    <string name="signin">Sign In</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="domain">http://169.254.222.200:5002/</string>
</resources>
