<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Launcher">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/greetings"
        android:textAlignment="center"
        android:textSize="40dp"/>
    <TextView
        android:id="@+id/name"
        android:textAlignment="center"
        android:textSize="40dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notice_name"
        android:textSize="25dp"
        android:layout_marginTop="30dp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="250dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:text="@string/notice"/>
    </ScrollView>

    <Button
        android:id="@+id/enter_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textAllCaps="false"
        android:text="@string/launcher_button1_text"/>

</LinearLayout>